# beelzebub

./: .gitignore  .gitleaks.toml  .gitleaksignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  UPSTREAM.md  go.mod  go.sum  main.go
bzb/: README.md  __main__.py  cli.py  pyproject.toml
bzb/bzb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bzb/src/bzb/: cli.py
bzb/src/bzb/commands/: aggregator.py  deploy.py  persona_init.py  persona_render.py  persona_validate.py  rotate.py  status.py  teardown.py  test.py
bzb/src/bzb/models/: bundle.py  canaries.py  node.py  persona.py
bzb/src/bzb/render/: coherence.py  jinja_env.py  renderer.py  sha.py
bzb/src/bzb/templates/: sensor-compose.yml.j2
bzb/src/bzb/templates/persona-skeleton/: canaries.yaml
bzb/tests/: test_bundle_loader.py  test_canaries_schema.py  test_cli_aggregator.py  test_cli_deploy.py  test_cli_persona.py  test_cli_rotate_canary.py  test_cli_rotate_persona.py  test_cli_status.py  test_cli_teardown.py  test_cli_test.py  test_cli_validate.py  test_coherence.py  test_compose_render.py  test_jinja_env.py  test_node_schema.py  test_persona_regression.py  test_persona_schema.py  test_renderer_canaries.py  test_renderer_context.py  test_renderer_full.py  test_renderer_golden.py  test_renderer_lures.py  test_sha.py  test_stage_persona_configs.py  test_verify_lure_shape.py
bzb/tests/fixtures/mini-persona/: canaries.yaml  persona.yaml
bzb/tests/fixtures/mini-persona/nodes/: web-01.yaml
bzb/tests/fixtures/multi-persona/: canaries.yaml  persona.yaml
(+385 files in other folders)
