[project]
name = "bzb"
version = "0.1.0"
description = "Honeynet persona deployment CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "requests>=2.31",
    "psycopg2-binary>=2.9",
]

[project.scripts]
bzb = "bzb.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bzb*"]
